--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,10 @@
+body {
+    font-family: 'IBM Plex Sans', sans-serif; 
+
+}
+
 #grad1 {
-    /* height: 200px; */
+    
     background-image: linear-gradient( rgb(51, 159, 254), rgb(255, 255, 255));
     background-repeat: no-repeat;
   }
